--- a/css/lens.css
+++ b/css/lens.css
@@ -114,41 +114,41 @@ button.button:hover {
 
  *****/
 
-/* tables */
-table.tablesorter {
-  font-family:arial;
-/*  background-color: #CDCDCD;*/
-  margin:10px 0pt 15px;
-  font-size: 8pt;
+.tablesorter {
+  font-family: arial;
+  margin: 0;
   width: 100%;
   text-align: left;
 }
-table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-  border: 1px solid #FFF;
-  font-size: 1.3em;
-  /*padding: 4px;*/
+.tablesorter thead {
+  background-color: #D8D8D8;
 }
-table.tablesorter thead tr .header {
+.tablesorter tbody tr td,
+.tablesorter thead tr th {
+  font-size: 1.4em;
+}
+.tablesorter thead tr .header {
   background-image: url(bg.gif);
   background-repeat: no-repeat;
-  background-position: center right;
+  background-position: center;
   cursor: pointer;
 }
-table.tablesorter tbody td {
+.tablesorter tbody td {
   color: #3D3D3D;
   padding: 4px;
   background-color: #FFF;
   vertical-align: top;
 }
-table.tablesorter tbody tr.odd td {
-  background-color:#F0F0F6;
+.tablesorter tbody .odd td {
+  background-color: #F3F3F3;
 }
-table.tablesorter thead tr .headerSortUp {
+.tablesorter thead tr .headerSortUp {
   background-image: url(asc.gif);
 }
-table.tablesorter thead tr .headerSortDown {
+.tablesorter thead tr .headerSortDown {
   background-image: url(desc.gif);
 }
-table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-background-color: #8dbdd8;
+.tablesorter thead tr .headerSortDown,
+.tablesorter thead tr .headerSortUp {
+  background-color: #8DBDD8;
 }
